Rensade gamla filer och uppdaterade klasserna